--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Be/Be-s.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Be/Be-s.in
@@ -1,22 +1,22 @@
 # atsym z nc nv iexc psfile
-Li 3 0 2 4 psp8
+Be 4 0 2 4 psp8
 # n l f
 1 0 2.0
-2 0 1.0
+2 0 2.0
 # lmax
 1
 # l rc ep ncon nbas qcut
-0 1.3 0.0 4 8 8.8
-1 1.1 0.1 4 8 8.0
+0 1.4 0.0 4 7 8.8
+1 1.1 0.0 4 7 8.0
 # lloc lpopt rc5 dvloc0
-4 5 1.1 0.0
+4 5 0.8 0.0
 # l nproj debl
 0 2 1.0
-1 2 0.45
+1 2 1.0
 # icmod fcfact
 0 0.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
-6.0 0.01
+4.0 0.01
  0
