--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Na/Na-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Na/Na-sp.in
@@ -1,28 +1,24 @@
 # atsym z nc nv iexc psfile
-K 19 3 3 4 psp8
+Na 11 1 3 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
 2 1 6.0
-3 0 2.0
-3 1 6.0
-4 0 1.0
+3 0 1.0
 # lmax
-2
+1
 # l rc ep ncon nbas qcut
-0 1.3 0.0 4 8 8.5
-1 1.3 0.0 4 8 8.5
-2 1.6 0.1 4 8 8.5
+0 1.15 0.0 4 7 9.3
+1 1.55 0.0 4 7 8.8
 # lloc lpopt rc5 dvloc0
-4 5 1.3 0.0
+4 5 1.15 0.0
 # l nproj debl
 0 2 1.0
-1 2 3.0
-2 2 3.0
+1 2 2.5
 # icmod fcfact
-1 0.1
+1 0.05
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
-6.0 0.01
+4.0 0.01
  0
