--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/N/N.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/N/N.in
@@ -1,23 +1,21 @@
 # atsym z nc nv iexc psfile
-O 8 1 2 4 psp8
+N 7 1 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
-2 1 4.0
+2 1 3.0
 # lmax
 1
 # l rc ep ncon nbas qcut
-0 1.2 0.0 4 8 9.0
-1 1.4 0.0 4 8 9.0
-#2 0.9 0.2 4 8 8.0
+0 1.25 0.0 4 7 8.6
+1 1.45 0.0 4 7 8.7
 # lloc lpopt rc5 dvloc0
-4 5 0.9 0.0
+4 5 1.25 0.0
 # l nproj debl
 0 2 1.0
-1 2 1.0
-#2 2 3.0
+1 2 3.0
 # icmod fcfact
-1 0.15
+1 0.35
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
