--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Al/Al.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Al/Al.in
@@ -1,25 +1,25 @@
 # atsym z nc nv iexc psfile
-S 16 3 2 4 psp8
+Al 13 3 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
 2 1 6.0
 3 0 2.0
-3 1 4.0
+3 1 1.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.5 0.0 4 7 7.5
-1 1.5 0.0 4 7 7.5
-2 1.6 0.1 4 7 7.0
+0 1.7 0.0 4 7 5.2
+1 1.8 0.0 4 7 5.5
+2 1.7 0.1 4 7 4.5
 # lloc lpopt rc5 dvloc0
-4 5 1.5 0.0
+4 5 1.7 0.0
 # l nproj debl
-0 2 4.5
-1 2 4.5
-2 2 1.0
+0 2 6.0
+1 2 5.3
+2 2 4.0
 # icmod fcfact
-1 0.15
+1 0.35
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
