--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/S/S.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/S/S.in
@@ -1,25 +1,25 @@
 # atsym z nc nv iexc psfile
-P 15 3 2 4 psp8
+S 16 3 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
 2 1 6.0
 3 0 2.0
-3 1 3.0
+3 1 4.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.5 0.0 4 8 5.5
-1 1.5 0.0 4 8 6.8
-2 1.55 0.1 4 8 6.8
+0 1.5 0.0 4 7 7.5
+1 1.5 0.0 4 7 7.5
+2 1.6 0.1 4 7 7.0
 # lloc lpopt rc5 dvloc0
 4 5 1.5 0.0
 # l nproj debl
-0 2 4.0
-1 2 4.0
+0 2 4.5
+1 2 4.5
 2 2 1.0
 # icmod fcfact
-1 0.15
+1 0.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
