--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Ru/Ru-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Ru/Ru-sp.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Pd 46 6 3 4 psp8
+Ru 44 6 4 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -9,13 +9,14 @@ Pd 46 6 3 4 psp8
 3 2 10.0
 4 0 2.0
 4 1 6.0
-4 2 10.0
+4 2 7.0
+5 0 1.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.35 0.0 4 7 8.8
-1 1.4 0.0 4 7 8.9
-2 1.5 0.0 4 7 8.6
+0 1.4 0.0 4 7 8.4
+1 1.45 0.0 4 7 9.0
+2 1.35 0.0 4 7 8.1
 # lloc lpopt rc5 dvloc0
 4 5 1.35 0.0
 # l nproj debl
@@ -23,9 +24,9 @@ Pd 46 6 3 4 psp8
 1 2 1.0
 2 2 1.0
 # icmod fcfact
-1 0.06
+1 0.3
 # epsh1 epsh2 depsh
--14.0 12.0 0.02
+-12.0 12.0 0.02
 # rlmax drl
 6.0 0.01
  0
