--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Zr/Zr-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Zr/Zr-sp.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Cd 48 6 4 4 psp8
+Zr 40 6 4 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -9,14 +9,14 @@ Cd 48 6 4 4 psp8
 3 2 10.0
 4 0 2.0
 4 1 6.0
-4 2 10.0
+4 2 2.0
 5 0 2.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.4 0.0 4 7 8.9
-1 1.4 0.0 4 7 8.9
-2 1.7 0.0 4 7 8.9
+0 1.5 0.0 4 8 7.7
+1 1.45 0.0 4 7 8.5
+2 1.4 0.0 4 7 8.0
 # lloc lpopt rc5 dvloc0
 4 5 1.4 0.0
 # l nproj debl
@@ -24,7 +24,7 @@ Cd 48 6 4 4 psp8
 1 2 1.0
 2 2 1.0
 # icmod fcfact
-1 0.05
+1 0.3
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
