--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Ge/Ge-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Ge/Ge-d.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Se 34 5 3 4 psp8
+Ge 32 5 3 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -8,21 +8,21 @@ Se 34 5 3 4 psp8
 3 1 6.0
 3 2 10.0
 4 0 2.0
-4 1 4.0
+4 1 2.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.6 0.0 4 7 5.0
-1 1.6 0.0 4 7 5.5
-2 1.7 0.0 4 7 9.3
+0 1.55 0.0 4 7 4.4
+1 1.6 0.0 4 7 4.4
+2 1.65 0.0 4 7 9.4
 # lloc lpopt rc5 dvloc0
-4 5 1.6 0.0
+4 5 1.55 0.0
 # l nproj debl
-0 2 4.5
-1 2 4.5
-2 2 2.0
+0 2 6.0
+1 2 5.0
+2 2 1.5
 # icmod fcfact
-1 0.25
+1 0.4
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
