--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Se/Se-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Se/Se-d.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-As 33 5 3 4 psp8
+Se 34 5 3 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -8,21 +8,21 @@ As 33 5 3 4 psp8
 3 1 6.0
 3 2 10.0
 4 0 2.0
-4 1 3.0
+4 1 4.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.7 0.0 4 7 4.4
-1 1.6 0.0 4 7 5.0
-2 1.7 0.0 4 7 9.2
+0 1.65 0.0 4 7 4.4
+1 1.6 0.0 4 7 5.5
+2 1.7 0.0 4 7 9.3
 # lloc lpopt rc5 dvloc0
 4 5 1.6 0.0
 # l nproj debl
-0 2 4.0
-1 2 4.8
-2 2 2.5
+0 2 4.5
+1 2 4.5
+2 2 2.0
 # icmod fcfact
-1 0.3
+1 0.4
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
