--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Os/Os-spdf.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Os/Os-spdf.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Pt 78 9 5 4 psp8
+Os 76 9 5 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -13,12 +13,12 @@ Pt 78 9 5 4 psp8
 5 0 2.0
 5 1 6.0
 4 3 14.0
-5 2 9.0
-6 0 1.0
+5 2 6.0
+6 0 2.0
 # lmax
 3
 # l rc ep ncon nbas qcut
-0 1.3 0.0 4 7 8.0
+0 1.4 0.0 4 7 8.0
 1 1.3 0.0 4 7 9.5
 2 1.5 0.0 4 7 7.5
 3 1.7 0.2 4 7 10.4
@@ -28,9 +28,9 @@ Pt 78 9 5 4 psp8
 0 2 1.0
 1 2 1.0
 2 2 1.0
-3 2 4.0
+3 2 2.0
 # icmod fcfact
-1 0.1
+1 0.35
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
