--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Sb/Sb.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Sb/Sb.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-I 53 9 2 4 psp8
+Sb 51 9 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -11,21 +11,21 @@ I 53 9 2 4 psp8
 4 1 6.0
 4 2 10.0
 5 0 2.0
-5 1 5.0
+5 1 3.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.85 0.0 4 7 3.2
-1 2.0 0.0 4 7 3.4
-2 2.2 0.1 4 7 4.0
+0 2.2 0.0 4 7 3.2
+1 2.1 0.0 4 7 4.0
+2 2.6 0.1 4 7 4.0
 # lloc lpopt rc5 dvloc0
-4 5 1.85 0.0
+4 5 2.1 0.0
 # l nproj debl
-0 2 2.2
-1 2 2.5
+0 2 2.0
+1 2 3.0
 2 2 3.0
 # icmod fcfact
-1 0.4
+1 0.5
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
