--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Au/hm_Au-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Au/hm_Au-sp.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Hg 80 12 2 4 psp8
+Au 79 10 4 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -14,23 +14,25 @@ Hg 80 12 2 4 psp8
 5 0 2.0
 5 1 6.0
 5 2 10.0
-6 0 2.0
+6 0 1.0
 # lmax
-2
+3
 # l rc ep ncon nbas qcut
-0 1.95 0.0 4 7 1.8
-1 2.3 0.0 4 7 2.0
-2 2.0 0.0 4 7 8.6
+0 2.2 0.0 4 7 6.0
+1 2.5 0.0 4 7 5.5
+2 2.4 0.0 4 8 6.0
+3 3.0 0.3 4 8 4.5
 # lloc lpopt rc5 dvloc0
-4 5 1.95 0.0
+4 3 2.2 0.0
 # l nproj debl
-0 2 2.0
+0 2 1.0
 1 2 2.5
 2 2 1.0
+3 2 1.5
 # icmod fcfact
-1 0.5
+1 0.3
 # epsh1 epsh2 depsh
--12.0 12.0 0.02
+-14.0 12.0 0.02
 # rlmax drl
-6.0 0.01
+5.0 0.01
  0
