--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Ag/Ag.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Ag/Ag.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Cd 48 6 4 4 psp8
+Ag 47 8 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -10,21 +10,21 @@ Cd 48 6 4 4 psp8
 4 0 2.0
 4 1 6.0
 4 2 10.0
-5 0 2.0
+5 0 1.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.4 0.0 4 8 8.8
-1 1.4 0.0 4 8 9.0
-2 1.55 0.0 4 9 9.0
+0 2.0 0.0 4 8 2.6
+1 2.2 0.0 4 7 3.4
+2 1.7 0.0 4 9 9.4
 # lloc lpopt rc5 dvloc0
-4 5 1.4 0.0
+4 5 1.7 0.0
 # l nproj debl
-0 2 2.0
-1 2 2.0
-2 2 2.0
+0 2 4.4
+1 2 2.5
+2 2 1.0
 # icmod fcfact
-1 0.035
+1 1.15
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
