--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/He/He-ploc.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/He/He-ploc.in
@@ -1,23 +1,21 @@
 # atsym z nc nv iexc psfile
-Ne 10 1 2 4 psp8
+He 2 0 1 4 psp8
 # n l f
 1 0 2.0
-2 0 2.0
-2 1 6.0
 # lmax
 1
 # l rc ep ncon nbas qcut
-0 1.3 0.0 4 7 9.0
-1 1.5 0.0 4 7 8.8
+0 1.25 0.0 4 8 8.4
+1 1.0 0.05 4 7 6.2
 # lloc lpopt rc5 dvloc0
-4 5 1.3 0.0
+1 5 1.0 0.0
 # l nproj debl
-0 2 1.5
-1 2 1.5
+0 2 1.0
+1 1 1.0
 # icmod fcfact
-1 0.05
+0 0.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
-4.0 0.01
+6.0 0.01
  0
