--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/Al/Al-dloc.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/Al/Al-dloc.in
@@ -1,25 +1,25 @@
 # atsym z nc nv iexc psfile
-S 16 3 2 4 psp8
+Al 13 3 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
 2 1 6.0
 3 0 2.0
-3 1 4.0
+3 1 1.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.5 0.0 4 9 6.3
-1 1.45 0.0 4 9 7.6
-2 1.5 0.05 4 9 6.2
+0 1.75 0.0 4 9 6.0
+1 1.75 0.0 4 9 6.4
+2 1.7 0.05 4 9 5.2
 # lloc lpopt rc5 dvloc0
-4 5 1.4 0.0
+2 5 1.4 0.0
 # l nproj debl
-0 2 2.0
-1 2 2.0
-2 2 1.0
+0 2 2.8
+1 2 2.8
+2 1 1.5
 # icmod fcfact
-1 0.25
+1 0.65
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
