--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/Au/Au-sp-newnlcc.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/Au/Au-sp-newnlcc.in
@@ -1,66 +1,38 @@
 # atsym z nc nv iexc psfile
-
-Ba 56 9 3 4 psp8
-
+Au 79 10 4 4 psp8
 # n l f
-
 1 0 2.0
-
 2 0 2.0
-
 2 1 6.0
-
 3 0 2.0
-
 3 1 6.0
-
 3 2 10.0
-
 4 0 2.0
-
 4 1 6.0
-
 4 2 10.0
-
+4 3 14.0
 5 0 2.0
-
 5 1 6.0
-
-6 0 2.0
-
+5 2 10.0
+6 0 1.0
 # lmax
-
-2
-
+3
 # l rc ep ncon nbas qcut
-
-0 2.15 0.0 4 7 5.2
-
-1 1.9 0.0 4 8 6.6
-
-2 2.15 0.0 4 9 6.6
-
+0 1.45 0.0 4 8 8.6
+1 1.55 0.0 4 8 8.4
+2 1.45 0.0 4 8 8.4
+3 1.5 0.3 4 7 5.2
 # lloc lpopt rc5 dvloc0
-
-4 5 1.9 0.0
-
+4 3 1.4 0.0
 # l nproj debl
-
 0 2 1.0
-
 1 2 2.5
-
-2 2 3.0
-
+2 2 1.5
+3 2 1.5
 # icmod fcfact
-
-3 5 1.25
+3 5 1.5
 # epsh1 epsh2 depsh
-
--12.0 12.0 0.02
-
+-14.0 12.0 0.02
 # rlmax drl
-
-6.0 0.01
-
+5.0 0.01
  0
