--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/Au/Au-sp-nonlcc.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/Au/Au-sp-nonlcc.in
@@ -1,56 +1,38 @@
 # atsym z nc nv iexc psfile
-
-Zn 30 3 4 4 psp8
-
+Au 79 10 4 4 psp8
 # n l f
-
 1 0 2.0
-
 2 0 2.0
-
 2 1 6.0
-
 3 0 2.0
-
 3 1 6.0
-
 3 2 10.0
-
 4 0 2.0
-
+4 1 6.0
+4 2 10.0
+4 3 14.0
+5 0 2.0
+5 1 6.0
+5 2 10.0
+6 0 1.0
 # lmax
-
-2
-
+3
 # l rc ep ncon nbas qcut
-
-0 1.35 0.0 4 9 8.8
-
-1 1.65 0.0 4 9 9.0
-
-2 1.85 0.0 4 9 9.0
-
+0 1.45 0.0 4 8 8.6
+1 1.55 0.0 4 8 8.4
+2 1.45 0.0 4 8 8.4
+3 1.5 0.3 4 7 5.2
 # lloc lpopt rc5 dvloc0
-
-4 5 1.3 0.0
-
+4 3 1.4 0.0
 # l nproj debl
-
 0 2 1.0
-
-1 2 1.0
-
-2 2 1.0
-
+1 2 2.5
+2 2 1.5
+3 2 1.5
 # icmod fcfact
-
-3 5 1.45
+0 0.0 
 # epsh1 epsh2 depsh
-
--12.0 12.0 0.02
-
+-14.0 12.0 0.02
 # rlmax drl
-
-6.0 0.01
-
+5.0 0.01
  0
