--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/V/V-sp.in_fcfact3.00_rcfact1.35/V-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/V/V-sp.in_fcfact3.00_rcfact1.35/V-sp.in
@@ -1,6 +1,6 @@
 # atsym z nc nv iexc psfile
 
-Sc 21 3 4 4 psp8
+V 23 3 4 4 psp8
 
 # n l f
 
@@ -14,7 +14,7 @@ Sc 21 3 4 4 psp8
 
 3 1 6.0
 
-3 2 1.0
+3 2 3.0
 
 4 0 2.0
 
@@ -24,27 +24,27 @@ Sc 21 3 4 4 psp8
 
 # l rc ep ncon nbas qcut
 
-0 1.35 0.0 4 9 8.6
+0 1.3 0.0 4 8 9.0
 
-1 1.35 0.0 4 8 9.0
+1 1.3 0.0 4 7 9.0
 
-2 1.65 0.0 4 8 8.8
+2 1.65 0.0 4 8 9.0
 
 # lloc lpopt rc5 dvloc0
 
-4 5 1.3 0.0
+4 5 1.2 0.0
 
 # l nproj debl
 
-0 2 2.0
+0 2 1.0
 
-1 2 2.0
+1 2 1.5
 
-2 2 2.0
+2 2 1.5
 
 # icmod fcfact
 
-3 5 1.25
+3 3 1.35
 # epsh1 epsh2 depsh
 
 -12.0 12.0 0.02
