Sb and Te potentials.
the Au potentials have an added upf file format

--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/Au/Au-sp-nonlcc-upf.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/Au/Au-sp-nonlcc-upf.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Te 52 8 3 4 psp8
+Au 79 10 4 4 upf
 # n l f
 1 0 2.0
 2 0 2.0
@@ -10,24 +10,29 @@ Te 52 8 3 4 psp8
 4 0 2.0
 4 1 6.0
 4 2 10.0
+4 3 14.0
 5 0 2.0
-5 1 4.0
+5 1 6.0
+5 2 10.0
+6 0 1.0
 # lmax
-2
+3
 # l rc ep ncon nbas qcut
-0 2.25 0.0 4 8 4.2
-1 1.9 0.0 4 8 4.8
-2 1.8 0.0 4 9 8.4
+0 1.45 0.0 4 8 8.6
+1 1.55 0.0 4 8 8.4
+2 1.45 0.0 4 8 8.4
+3 1.5 0.3 4 7 5.2
 # lloc lpopt rc5 dvloc0
-4 5 1.8 0.0
+4 3 1.4 0.0
 # l nproj debl
-0 2 3.0
-1 2 3.5
-2 2 1.6
+0 2 1.0
+1 2 2.5
+2 2 1.5
+3 2 1.5
 # icmod fcfact
-3 5 1.43
+0 0.0 
 # epsh1 epsh2 depsh
--12.0 12.0 0.02
+-14.0 12.0 0.02
 # rlmax drl
-6.0 0.01
+5.0 0.01
  0
