--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/He/He-ploc.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-MC2/He/He-ploc.in
@@ -1,27 +1,21 @@
 # atsym z nc nv iexc psfile
-Ar 18 3 2 4 psp8
+He 2 0 1 4 psp8
 # n l f
 1 0 2.0
-2 0 2.0
-2 1 6.0
-3 0 2.0
-3 1 6.0
 # lmax
-2
+1
 # l rc ep ncon nbas qcut
-0 1.55 0.0 4 8 8.2
-1 1.55 0.0 4 8 8.2
-2 1.55 0.1 4 8 8.2
+0 1.25 0.0 4 8 8.4
+1 1.0 0.05 4 7 6.2
 # lloc lpopt rc5 dvloc0
-4 5 1.5 0.0
+1 5 1.0 0.0
 # l nproj debl
-0 2 1.5
-1 2 1.5
-2 2 1.0
+0 2 1.0
+1 1 1.0
 # icmod fcfact
-3 7 1.25
+0 0.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
-4.0 0.01
+6.0 0.01
  0
