--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Hf/Hf-p-2.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Hf/Hf-p-2.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Pt 78 11 3 4 psp8
+Hf 72 11 3 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -10,27 +10,27 @@ Pt 78 11 3 4 psp8
 4 0 2.0
 4 1 6.0
 4 2 10.0
-5 0 2.0
 4 3 14.0
+5 0 2.0
 5 1 6.0
-5 2 9.0
-6 0 1.0
+5 2 2.0
+6 0 2.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 2.38 0.0 4 7 2.4
-1 1.9 0.0 4 8 8.2
-2 1.85 0.0 4 8 7.8
+0 2.45 0.0 4 7 2.2
+1 1.95 0.0 4 8 6.0
+2 2.15 0.0 4 8 6.4
 # lloc lpopt rc5 dvloc0
-4 3 1.6 0.0
+4 5 1.85 8.0
 # l nproj debl
-0 2 1.0
-1 2 2.5
-2 2 1.0
+0 2 3.5
+1 2 1.5
+2 2 1.8
 # icmod fcfact
-3 3 1.7
+3 2.96 1.59
 # epsh1 epsh2 depsh
--14.0 12.0 0.02
+-12.0 12.0 0.02
 # rlmax drl
-5.0 0.01
+6.0 0.01
  0
