--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Te/Te-spd.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Te/Te-spd.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Sb 51 6 5 4 psp8
+Te 52 6 5 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -11,7 +11,7 @@ Sb 51 6 5 4 psp8
 4 1 6.0
 4 2 10.0
 5 0 2.0
-5 1 3.0
+5 1 4.0
 # lmax
 2
 # l rc ep ncon nbas qcut
@@ -21,8 +21,8 @@ Sb 51 6 5 4 psp8
 # lloc lpopt rc5 dvloc0
 4 5 1.3 0.0
 # l nproj debl
-0 2 1.0
-1 2 3.0
+0 2 3.0
+1 2 3.5
 2 2 1.6
 # icmod fcfact rcfact
 3 5.0 1.5
