--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Cl/Cl-new.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Cl/Cl-new.in
@@ -1,27 +1,27 @@
 # atsym z nc nv iexc psfile
-Al 13 3 2 4 psp8
+Cl 17 3 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
 2 1 6.0
 3 0 2.0
-3 1 1.0
+3 1 5.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.8 0.0 4 9 6.2
-1 1.8 0.0 4 9 6.2
-2 1.8 0.05 4 9 5.2
+0 1.55 0.0 4 9 6.8
+1 1.35 0.0 4 8 8.0
+2 1.75 0.1 4 9 6.8
 # lloc lpopt rc5 dvloc0
-4 5 1.4 0.0
+4 5 1.3 0.0
 # l nproj debl
-0 2 2.8
-1 2 2.8
+0 2 2.0
+1 2 2.0
 2 2 1.5
 # icmod fcfact rcfact
-3 5.0 1.3
+3 8.0 1.23
 # epsh1 epsh2 depsh
--12.0 12.0 0.02
+-15.0 12.0 0.02
 # rlmax drl
 6.0 0.01
  0
