--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/P/P-new.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/P/P-new.in
@@ -1,25 +1,25 @@
 # atsym z nc nv iexc psfile
-Al 13 3 2 4 psp8
+P 15 3 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
 2 1 6.0
 3 0 2.0
-3 1 1.0
+3 1 3.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.8 0.0 4 9 6.2
-1 1.8 0.0 4 9 6.2
-2 1.8 0.05 4 9 5.2
+0 1.45 0.0 4 9 6.2
+1 1.55 0.0 4 9 6.6
+2 1.7 0.05 4 9 6.6
 # lloc lpopt rc5 dvloc0
-4 5 1.4 0.0
+4 5 1.45 0.0
 # l nproj debl
-0 2 2.8
-1 2 2.8
-2 2 1.5
+0 2 3.0
+1 2 2.5
+2 2 2.0
 # icmod fcfact rcfact
-3 5.0 1.3
+3 5.0 1.1
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
