--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Si/Si-new.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Si/Si-new.in
@@ -1,25 +1,25 @@
 # atsym z nc nv iexc psfile
-Al 13 3 2 4 psp8
+Si 14 3 2 4 psp8
 # n l f
 1 0 2.0
 2 0 2.0
 2 1 6.0
 3 0 2.0
-3 1 1.0
+3 1 2.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.8 0.0 4 9 6.2
-1 1.8 0.0 4 9 6.2
-2 1.8 0.05 4 9 5.2
+0 1.6 0.0 4 9 6.4
+1 1.71 0.0 4 9 6.4
+2 1.9 0.05 4 9 6.4
 # lloc lpopt rc5 dvloc0
-4 5 1.4 0.0
+4 5 1.6 0.0
 # l nproj debl
-0 2 2.8
-1 2 2.8
+0 2 2.5
+1 2 2.5
 2 2 1.5
 # icmod fcfact rcfact
-3 5.0 1.3
+3 4.0 1.3
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
