--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Mg/Mg-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Mg/Mg-sp.in
@@ -15,8 +15,8 @@ Mg 12 1 3 -116133 psp8
 # l nproj debl
 0 2 1.0
 1 2 3.0
-# icmod fcfact
-0 4 1.5
+# icmod fcfact rcfact
+0 4.0 1.5
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
