--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Mg/Mg.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Mg/Mg.in
@@ -15,8 +15,8 @@ Mg 12 3 1 -116133 psp8
 # l nproj debl
 0 2 3.0
 1 2 2.9
-# icmod fcfact
-3 4 1.3 
+# icmod fcfact rcfact
+3 4.0 1.3
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
