--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Na/Na-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Na/Na-sp.in
@@ -15,8 +15,8 @@ Na 11 1 3 -116133 psp8
 # l nproj debl
 0 2 1.0
 1 2 3.0
-# icmod fcfact
-0 0.04
+# icmod fcfact rcfact
+0 0.04 0.0
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
