--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Si/Si.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Si/Si.in
@@ -18,8 +18,8 @@ Si 14 3 2 -116133 psp8
 0 2 2.5
 1 2 2.5
 2 2 1.5
-# icmod fcfact
-3 4 1.3
+# icmod fcfact rcfact
+3 4.0 1.3
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
