--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Ag/Ag-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Ag/Ag-sp.in
@@ -23,7 +23,7 @@ Ag 47 6 4 -116133 psp8
 0 2 1.0
 1 2 1.0
 2 2 1.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 7.0 1.24
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
