--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/In/In-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/In/In-d.in
@@ -24,8 +24,8 @@ In 49 8 3 -116133 psp8
 0 2 1.1
 1 2 3.0
 2 2 1.5
-# icmod fcfact
-3 5 1.44
+# icmod fcfact rcfact
+3 5.0 1.44
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
