--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Rb/Rb-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Rb/Rb-sp.in
@@ -22,8 +22,8 @@ Rb 37 6 3 -116133 psp8
 0 2 1.0
 1 2 1.5
 2 2 1.5
-# icmod fcfact
-3 7 1.25
+# icmod fcfact rcfact
+3 7.0 1.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
