--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Sb/Sb.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Sb/Sb.in
@@ -24,7 +24,7 @@ Sb 51 9 2 -116133 psp8
 0 2 1.8
 1 2 3.0
 2 2 3.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 7.0 1.24
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
