--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Sn/Sn-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Sn/Sn-d.in
@@ -24,7 +24,7 @@ Sn 50 8 3 -116133 psp8
 0 2 1.9
 1 2 2.5
 2 2 2.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 6.5 1.31
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
