--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Te/Te.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Te/Te.in
@@ -24,7 +24,7 @@ Te 52 9 2 -116133 psp8
 0 2 1.5
 1 2 1.5
 2 2 3.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 9.0 1.2
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
