--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Zr/Zr-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Zr/Zr-sp.in
@@ -23,8 +23,8 @@ Zr 40 6 4 -116133 psp8
 0 2 1.0
 1 2 2.0
 2 2 2.0
-# icmod fcfact
-3 5 1.35
+# icmod fcfact rcfact
+3 5.0 1.35
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
