--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Au/Au-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Au/Au-sp.in
@@ -29,8 +29,8 @@ Au 79 10 4 -116133 psp8
 1 2 2.5
 2 2 1.5
 3 1 1.5
-# icmod fcfact
-3 9 1.2
+# icmod fcfact rcfact
+3 9.0 1.2
 # epsh1 epsh2 depsh
 -14.0 12.0 0.02
 # rlmax drl
