--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Hf/Hf-fsp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Hf/Hf-fsp.in
@@ -29,8 +29,8 @@ Hf 72 9 5 -116133 psp8
 1 2 1.0
 2 2 1.0
 3 2 1.5
-# icmod fcfact
-3 3 1.45
+# icmod fcfact rcfact
+3 3.0 1.45
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
