--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Po/Po-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Po/Po-d.in
@@ -28,8 +28,8 @@ Po 84 12 3 -116133 psp8
 0 2 2.6
 1 2 2.5
 2 2 2.5
-# icmod fcfact
-3 6 1.34
+# icmod fcfact rcfact
+3 6.0 1.34
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
