--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Rn/Rn.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Rn/Rn.in
@@ -28,7 +28,7 @@ Rn 86 13 2 -116133 psp8
 0 2 2.2
 1 2 2.2
 2 2 2.2
-# icmod fcfact
+# icmod fcfact rcfact
 3 8.0 1.2
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
