--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Ta/Ta-fsp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Ta/Ta-fsp.in
@@ -18,10 +18,10 @@ Ta 73 9 5 -116133 psp8
 # lmax
 3
 # l rc ep ncon nbas qcut
-0 2.30 0.0 4 7 5.2
+0 2.3 0.0 4 7 5.2
 1 1.85 0.0 4 7 6.6
 2 2.05 0.0 4 9 6.6
-3 1.6 0.0 4 8 11.4 
+3 1.6 0.0 4 8 11.4
 # lloc lpopt rc5 dvloc0
 4 5 1.6 0.0
 # l nproj debl
@@ -29,8 +29,8 @@ Ta 73 9 5 -116133 psp8
 1 2 1.5
 2 2 1.8
 3 2 1.0
-# icmod fcfact
-3 5 1.36
+# icmod fcfact rcfact
+3 5.0 1.36
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
