--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/W/W-fsp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/W/W-fsp.in
@@ -21,7 +21,7 @@ W 74 9 5 -116133 psp8
 0 1.45 0.0 4 7 8.3
 1 1.5 0.0 4 7 8.5
 2 1.35 0.0 4 7 9.2
-3 1.7 0.0 4 9 11
+3 1.7 0.0 4 9 11.0
 # lloc lpopt rc5 dvloc0
 4 5 1.35 0.0
 # l nproj debl
@@ -29,8 +29,8 @@ W 74 9 5 -116133 psp8
 1 2 1.0
 2 2 1.0
 3 2 3.5
-# icmod fcfact
-3 5 1.33
+# icmod fcfact rcfact
+3 5.0 1.33
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
