--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Li/Li-s.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Li/Li-s.in
@@ -13,8 +13,8 @@ Li 3 0 2 -001012 psp8
 # l nproj debl
 0 2 1.0
 1 2 1.0
-# icmod fcfact
-0 0.25
+# icmod fcfact rcfact
+0 0.25 0.0
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
