--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/C/C-gw.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/C/C-gw.in
@@ -14,8 +14,8 @@ C 6 1 2 -001012 psp8
 # l nproj debl
 0 2 5.0
 1 2 1.5
-# icmod fcfact
-3 6 1.30
+# icmod fcfact rcfact
+3 6.0 1.3
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
