--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cl/Cl.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cl/Cl.in
@@ -18,7 +18,7 @@ Cl 17 3 2 -001012 psp8
 0 2 2.0
 1 2 2.0
 2 2 1.5
-# icmod fcfact
+# icmod fcfact rcfact
 3 8.0 1.23
 # epsh1 epsh2 depsh
 -15.0 12.0 0.02
