--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/S/S.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/S/S.in
@@ -9,17 +9,17 @@ S 16 3 2 -001012 psp8
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.45 0.0 4 9 6.3
+0 1.45 0.0 4 9 6.5
 1 1.45 0.0 4 9 7.6
-2 1.60 0.15 4 9 7.0
+2 1.7 0.15 4 9 7.6
 # lloc lpopt rc5 dvloc0
 4 5 1.4 0.0
 # l nproj debl
 0 2 2.0
 1 2 2.0
 2 2 1.0
-# icmod fcfact
-3 6 1.25
+# icmod fcfact rcfact
+3 6.0 1.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
