--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Ca/Ca-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Ca/Ca-sp.in
@@ -19,8 +19,8 @@ Ca 20 3 3 -001012 psp8
 0 2 2.0
 1 2 2.0
 2 2 2.0
-# icmod fcfact
-3 6 1.28
+# icmod fcfact rcfact
+3 6.0 1.28
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
