--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Co/Co-sp-high.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Co/Co-sp-high.in
@@ -20,8 +20,8 @@ Co 27 3 4 -001012 psp8
 0 2 0.8
 1 2 0.8
 2 2 0.8
-# icmod fcfact
-3 6 1.8
+# icmod fcfact rcfact
+3 6.0 1.8
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
