--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cr/Cr-sp-high.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cr/Cr-sp-high.in
@@ -11,16 +11,16 @@ Cr 24 3 4 -001012 psp8
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.1 0.0 4 8 10.8
-1 1.1 0.0 4 7 11.0
-2 1.4 0.0 4 8 11.0
+0 1.1 0.0 4 8 11.2
+1 1.1 0.0 4 7 11.2
+2 1.4 0.0 4 8 11.2
 # lloc lpopt rc5 dvloc0
 4 5 1.1 0.0
 # l nproj debl
 0 2 1.0
 1 2 1.0
 2 2 1.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 4.5 1.6
 # epsh1 epsh2 depsh
 -18.0 12.0 0.02
