--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Fe/Fe-sp-high.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Fe/Fe-sp-high.in
@@ -11,17 +11,17 @@ Fe 26 3 4 -001012 psp8
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 1.1 0.0 3 7 10.3
+0 1.1 0.0 3 7 10.5
 1 1.1 0.0 3 7 9.2
-2 1.2 0.0 3 7 12.4
+2 1.2 0.0 3 7 11.8
 # lloc lpopt rc5 dvloc0
 4 5 1.1 0.0
 # l nproj debl
 0 2 1.0
 1 2 0.8
 2 2 0.8
-# icmod fcfact
-3 3.0 1.7 
+# icmod fcfact rcfact
+3 3.0 1.7
 # epsh1 epsh2 depsh
 -24.0 12.0 0.02
 # rlmax drl
