--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Ni/Ni-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Ni/Ni-sp.in
@@ -20,8 +20,8 @@ Ni 28 3 4 -001012 psp8
 0 2 1.0
 1 2 2.8
 2 2 1.0
-# icmod fcfact
-3 3 1.7
+# icmod fcfact rcfact
+3 3.0 1.7
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
