--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Sc/Sc-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Sc/Sc-sp.in
@@ -13,15 +13,15 @@ Sc 21 3 4 -001012 psp8
 # l rc ep ncon nbas qcut
 0 1.35 0.0 4 9 8.6
 1 1.35 0.0 4 8 9.0
-2 1.65 0.0 4 8 8.8
+2 1.65 0.0 4 8 9.0
 # lloc lpopt rc5 dvloc0
 4 5 1.3 0.0
 # l nproj debl
 0 2 2.0
 1 2 2.0
 2 2 2.0
-# icmod fcfact
-3 5 1.25
+# icmod fcfact rcfact
+3 5.0 1.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
