--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Ti/Ti-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Ti/Ti-sp.in
@@ -12,7 +12,7 @@ Ti 22 3 4 -001012 psp8
 2
 # l rc ep ncon nbas qcut
 0 1.35 0.0 4 8 8.6
-1 1.3 0.0 4 8 9.0
+1 1.3 0.0 4 8 8.6
 2 1.65 0.0 4 8 9.0
 # lloc lpopt rc5 dvloc0
 4 5 1.3 0.0
@@ -20,8 +20,8 @@ Ti 22 3 4 -001012 psp8
 0 2 1.0
 1 2 2.0
 2 2 1.5
-# icmod fcfact
-3 2.5 1.40
+# icmod fcfact rcfact
+3 2.5 1.4
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
