--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/V/V-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/V/V-sp.in
@@ -20,8 +20,8 @@ V 23 3 4 -001012 psp8
 0 2 1.0
 1 2 1.5
 2 2 1.5
-# icmod fcfact
-3 5 1.3
+# icmod fcfact rcfact
+3 5.0 1.3
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
