--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/As/As.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/As/As.in
@@ -21,7 +21,7 @@ As 33 6 2 -001012 psp8
 0 2 4.5
 1 2 4.5
 2 2 3.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 8.0 1.15
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
