--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Br/Br.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Br/Br.in
@@ -21,7 +21,7 @@ Br 35 6 2 -001012 psp8
 0 2 3.2
 1 2 4.0
 2 2 2.5
-# icmod fcfact
+# icmod fcfact rcfact
 3 8.0 1.21
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
