--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Se/Se-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Se/Se-d.in
@@ -21,8 +21,8 @@ Se 34 5 3 -001012 psp8
 0 2 4.5
 1 2 4.5
 2 2 2.0
-# icmod fcfact
-3 5 1.4
+# icmod fcfact rcfact
+3 5.0 1.4
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
