--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cd/Cd-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cd/Cd-sp.in
@@ -23,8 +23,8 @@ Cd 48 6 4 -001012 psp8
 0 2 2.0
 1 2 2.0
 2 2 2.0
-# icmod fcfact
-3 6 1.26
+# icmod fcfact rcfact
+3 6.0 1.26
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
