--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cd/Cd.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Cd/Cd.in
@@ -23,8 +23,8 @@ Cd 48 8 2 -001012 psp8
 0 2 4.0
 1 2 4.0
 2 2 1.5
-# icmod fcfact
-3 5 1.41
+# icmod fcfact rcfact
+3 5.0 1.41
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
