--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Pd/Pd-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Pd/Pd-sp.in
@@ -22,7 +22,7 @@ Pd 46 6 3 -001012 psp8
 0 2 3.0
 1 2 1.8
 2 2 1.5
-# icmod fcfact
+# icmod fcfact rcfact
 3 7.0 1.23
 # epsh1 epsh2 depsh
 -14.0 12.0 0.02
