--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Sn/Sn.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Sn/Sn.in
@@ -24,7 +24,7 @@ Sn 50 9 2 -001012 psp8
 0 2 1.9
 1 2 2.5
 2 2 2.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 7.0 1.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
