--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Hf/Hf-fsp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Hf/Hf-fsp.in
@@ -20,7 +20,7 @@ Hf 72 9 5 -001012 psp8
 # l rc ep ncon nbas qcut
 0 1.55 0.0 4 8 7.5
 1 1.6 0.0 4 8 8.0
-2 1.4 0.0 4 8 9.2
+2 1.45 0.0 4 8 9.2
 3 1.6 0.0 4 8 11.4
 # lloc lpopt rc5 dvloc0
 4 5 1.3 0.0
@@ -29,8 +29,8 @@ Hf 72 9 5 -001012 psp8
 1 2 1.0
 2 2 1.0
 3 2 1.5
-# icmod fcfact
-3 3 1.45
+# icmod fcfact rcfact
+3 3.0 1.45
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
