--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/In/In-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/In/In-d.in
@@ -15,7 +15,7 @@ In 49 8 3 -001012 psp8
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 2.1 0.0 5 8 2.8
+0 2.4 0.0 5 8 2.8
 1 2.35 0.0 5 8 2.8
 2 1.85 0.0 4 7 8.2
 # lloc lpopt rc5 dvloc0
@@ -24,8 +24,8 @@ In 49 8 3 -001012 psp8
 0 2 1.1
 1 2 3.0
 2 2 1.5
-# icmod fcfact
-3 5 1.44
+# icmod fcfact rcfact
+3 5.0 1.44
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
