--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Sb/Sb-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Sb/Sb-d.in
@@ -24,8 +24,8 @@ Sb 51 8 3 -001012 psp8
 0 2 1.0
 1 2 3.0
 2 2 1.6
-# icmod fcfact
-3 5 1.41
+# icmod fcfact rcfact
+3 5.0 1.41
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
