--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Xe/Xe.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Xe/Xe.in
@@ -24,8 +24,8 @@ Xe 54 9 2 -001012 psp8
 0 2 4.0
 1 2 3.0
 2 2 4.0
-# icmod fcfact
-3 8 1.23
+# icmod fcfact rcfact
+3 8.0 1.23
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
