--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Hg/Hg.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Hg/Hg.in
@@ -27,8 +27,8 @@ Hg 80 12 2 -001012 psp8
 0 2 2.5
 1 2 3.0
 2 2 1.0
-# icmod fcfact
-3 6 1.33
+# icmod fcfact rcfact
+3 6.0 1.33
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
