--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Po/Po-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Po/Po-d.in
@@ -19,17 +19,17 @@ Po 84 12 3 -001012 psp8
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 2.2 0.0 4 7 3.6
+0 2.4 0.0 4 8 3.6
 1 2.2 0.0 4 8 4.6
 2 1.9 0.0 4 8 8.0
 # lloc lpopt rc5 dvloc0
 4 5 1.9 0.0
 # l nproj debl
 0 2 2.6
-1 2 2.5
+1 2 3.2
 2 2 2.5
-# icmod fcfact
-3 6 1.34
+# icmod fcfact rcfact
+3 6.0 1.34
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
