--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Tl/Tl-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Tl/Tl-d.in
@@ -19,7 +19,7 @@ Tl 81 12 3 -001012 psp8
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 2.1 0.0 4 7 2.8
+0 2.0 0.0 4 7 2.8
 1 2.6 0.0 4 7 2.6
 2 2.0 0.0 4 8 7.4
 # lloc lpopt rc5 dvloc0
@@ -28,7 +28,7 @@ Tl 81 12 3 -001012 psp8
 0 2 2.5
 1 2 2.8
 2 2 1.0
-# icmod fcfact
+# icmod fcfact rcfact
 3 7.0 1.3
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
