--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Rb/Rb-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Rb/Rb-sp.in
@@ -17,13 +17,13 @@ Rb 37 6 3 -001012 psp8
 1 1.75 0.0 4 9 6.6
 2 1.9 0.1 4 9 7.4
 # lloc lpopt rc5 dvloc0
-4 5 1.7 4.0
+4 5 1.7 2.5
 # l nproj debl
 0 2 1.0
-1 2 1.5
-2 2 1.5
-# icmod fcfact
-3 7 1.25
+1 2 3.5
+2 2 2.5
+# icmod fcfact rcfact
+3 7.0 1.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
