--- a/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Ba/Ba-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBEsol-PDv0.3/Ba/Ba-sp.in
@@ -25,8 +25,8 @@ Ba 56 9 3 -116133 psp8
 0 2 1.0
 1 2 2.5
 2 2 3.0
-# icmod fcfact
-3 5 1.25
+# icmod fcfact rcfact
+3 5.0 1.25
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
