--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Pt/Pt-sp.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Pt/Pt-sp.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Pt 78 10 4 -001012 psp8
+Pt 78 10 4 -001012 p psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -16,17 +16,19 @@ Pt 78 10 4 -001012 psp8
 5 2 9.0
 6 0 1.0
 # lmax
-2
+3
 # l rc ep ncon nbas qcut
-0 1.4 0.0 4 7 8.8
-1 1.45 0.0 4 8 9.0
-2 1.4 0.0 4 7 9.6
+0 1.45 0.0 4 7 8.8
+1 1.45 0.0 4 7 9.0
+2 1.45 0.0 4 7 8.8
+3 1.9 0.1 4 8 6.8
 # lloc lpopt rc5 dvloc0
 4 3 1.3 0.0
 # l nproj debl
 0 2 1.0
 1 2 2.5
 2 2 1.0
+3 2 3.0
 # icmod fcfact rcfact
 3 5.0 1.37
 # epsh1 epsh2 depsh
