--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Br/Br-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Br/Br-d.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Hf 72 11 3 -001012 psp8
+Br 35 5 3 -001012 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -8,27 +8,21 @@ Hf 72 11 3 -001012 psp8
 3 1 6.0
 3 2 10.0
 4 0 2.0
-4 1 6.0
-4 2 10.0
-4 3 14.0
-5 0 2.0
-5 1 6.0
-5 2 2.0
-6 0 2.0
+4 1 5.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 2.45 0.0 4 7 2.2
-1 1.95 0.0 4 8 6.0
-2 2.15 0.0 4 8 6.4
+0 1.8 0.0 4 8 5.8
+1 1.5 0.0 4 8 6.6
+2 1.9 0.0 4 8 8.6
 # lloc lpopt rc5 dvloc0
-4 5 1.85 8.0
+4 5 1.5 0.0
 # l nproj debl
-0 2 3.5
-1 2 1.5
-2 2 1.8
-# icmod fcfact
-3 2.96 1.59
+0 2 3.2
+1 2 4.0
+2 2 2.5
+# icmod fcfact rcfact
+3 6.5 1.35
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
