--- a/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Rn/Rn-d.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PW-PDv0.3/Rn/Rn-d.in
@@ -1,5 +1,5 @@
 # atsym z nc nv iexc psfile
-Sb 51 9 2 -001012 psp8
+Rn 86 12 3 -001012 psp8
 # n l f
 1 0 2.0
 2 0 2.0
@@ -11,21 +11,25 @@ Sb 51 9 2 -001012 psp8
 4 1 6.0
 4 2 10.0
 5 0 2.0
-5 1 3.0
+5 1 6.0
+4 3 14.0
+5 2 10.0
+6 0 2.0
+6 1 6.0
 # lmax
 2
 # l rc ep ncon nbas qcut
-0 2.5 0.0 4 9 4.1
-1 2.15 0.0 4 8 4.6
-2 2.6 0.1 4 8 5.0
+0 2.2 0.0 4 7 3.6
+1 2.0 0.0 4 7 4.6
+2 1.8 0.0 4 8 8.4
 # lloc lpopt rc5 dvloc0
-4 5 2.15 0.0
+4 5 1.8 0.0
 # l nproj debl
-0 2 1.8
-1 2 3.0
-2 2 3.0
+0 2 2.6
+1 2 2.5
+2 2 1.8
 # icmod fcfact rcfact
-3 7.0 1.24
+3 6.0 1.34
 # epsh1 epsh2 depsh
 -12.0 12.0 0.02
 # rlmax drl
