--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ install:
   - conda install matplotlib seaborn
   - conda install ipython jupyter nbformat
   # Install abinit from gmatteo's conda channel.
-  - conda install abinit
+  #- conda install abinit
   # phonopy is not a requirement but we test scripts in data/runs that use it
-  - conda install -c conda-forge phonopy
+  #- conda install -c conda-forge phonopy
   # FIXME: I'm still using my fork
   - git clone https://github.com/gmatteo/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
   - python setup.py install
@@ -45,8 +45,8 @@ install:
   #- ./dev_scripts/pyclean.py .
 
 # command to run tests
-#script: abicheck.py; pytest -v abipy
-script: abicheck.py; nosetests abipy -v --with-coverage --cover-package=abipy --logging-level=INFO
+#script: pytest -v pseudo_dojo
+script: nosetests pseudo_dojo -v --with-coverage --cover-package=pseudo_dojo --logging-level=INFO
 # This is to run the integration tests (slow)
 #; pytest -v abipy/integration_tests
 
