--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,6 @@ install:
 
   # Install abinit from abinit conda channel.
   - conda config --add channels conda-forge
-  - conda install -c abinit abinit=8.2.2
 
   # Get pymatgen from matsci
   - conda config --add channels matsci
@@ -33,14 +32,16 @@ install:
   #- git clone https://github.com/gmatteo/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
   # pymatgen master
   #- git clone https://github.com/materialsproject/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
+  - conda install -c abinit abipy
+  - conda install -c abinit abinit=8.2.2
 
   # See https://github.com/BVLC/caffe/issues/3884 and https://docs.continuum.io/mkl-optimizations/
-  - conda install nomkl
-  - conda install gcc scipy
-  - conda install pandas
-  - conda install netcdf4 
+  #- conda install nomkl
+  #- conda install gcc scipy
+  #- conda install pandas
+  #- conda install netcdf4 
   # See hSttps://github.com/ContinuumIO/anaconda-issues/issues/1360
-  - conda install hdf4=4.2.12
+  #- conda install hdf4=4.2.12
   - pip install pytest scripttest nose nose-exclude
   - pip install pep8 python-coveralls
   - conda install matplotlib seaborn
@@ -48,10 +49,9 @@ install:
   # Install abinit from gmatteo's conda channel.
   #- conda install abinit
   # phonopy is not a requirement but we test scripts in data/runs that use it
-  #- conda install -c conda-forge phonopy
   # FIXME: I'm still using my fork
-  - git clone https://github.com/gmatteo/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
-  - git clone https://github.com/gmatteo/abipy.git && cd abipy && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
+  #- git clone https://github.com/gmatteo/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
+  #- git clone https://github.com/gmatteo/abipy.git && cd abipy && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
 
   - python setup.py install
   - mkdir -p ${HOME}/.abinit/abipy 
