--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Lu/Lu3+_f-in-core.in
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Lu/Lu3+_f-in-core.in
@@ -1,18 +1,18 @@
 # ATOM AND REFERENCE CONFIGURATION
 # atsym  z   nc   nv     iexc    psfile
-  Sm 62.00   10    4       4      psp8
+  Lu 71.00   10    4       4       psp8
 #
 #   n    l    f        energy (Ha)
     1    0    2.00    
-    2    0    2.00    
+    2    0    2.00   
     2    1    6.00    
-    3    0    2.00    
+    3    0    2.00   
     3    1    6.00    
     3    2   10.00    
     4    0    2.00    
     4    1    6.00    
     4    2   10.00    
-    4    3    5.00    
+    4    3   14.00    
     5    0    2.00    
     5    1    6.00    
     5    2    1.00    
@@ -23,18 +23,18 @@
     3
 #
 #   l,   rc,     ep,   ncon, nbas, qcut
-    0    2.10   -1.61    4    8    5.50
-    1    1.90   -0.91    4    8    7.00
-    2    1.90   -0.11    4    9    6.60
+    0    2.05   -1.90    4    8    6.40
+    1    1.80   -1.00    4    9    7.80
+    2    1.80   -0.80    4    9    6.60
     3    2.50    1.00    4    8    6.50
 #
 # LOCAL POTENTIAL
 # lloc, lpopt,  rc(5),   dvloc0
-    4    4      1.90       0.00
+    4    4      1.80       0.00
 #
 # VANDERBILT-KLEINMAN-BYLANDER PROJECTORs
 # l, nproj, debl
-    0    2    1.4638
+    0    2    2.0000
     1    2    4.0000
     2    2    4.0000
     3    1    2.0000
