--- a/.travis.yml
+++ b/.travis.yml
@@ -5,54 +5,40 @@ matrix:
   include:
     - os: linux
       python: 2.7
-      env: PYTHON_VERSION=2.7
+      env: ABINIT_VERSION=8.6.1
     - os: linux
       python: 3.6
-      env: PYTHON_VERSION=3.6
-    #- os: osx
-    #  python: 2.7
-    #  language: generic
-    #  env: PYTHON_VERSION=2.7
+      env: ABINIT_VERSION=8.6.1
 
-sudo: required
+sudo: false
 
 install:
   #- sudo apt-get update
   - env
-
+  #- set -ev  # exit on first error, print each command
+  #
+  # pip-based installation.
+  #- travis_wait pip install -r requirements.txt
+  #- travis_wait pip install -r requirements-optional.txt
+  #
   # Install conda https://conda.io/docs/travis.html
-  - source ./dev_scripts/conda_installer.sh
+  - source dev_scripts/conda_get.sh
+  #- source dev_scripts/conda_install.sh
+  - conda uninstall -y pymatgen
+  - conda uninstall -y abipy
 
   # Install abinit from abinit conda channel.
-  - conda config --add channels conda-forge
+  #- conda config --add channels conda-forge
 
   # Get pymatgen from matsci
-  - conda config --add channels matsci
+  #- conda config --add channels matsci
   # Use my pymatgen fork
   #- git clone https://github.com/gmatteo/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
   # pymatgen master
   #- git clone https://github.com/materialsproject/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
-  - conda install -c abinit abipy
-  #- conda install -c abinit abinit=8.2.2
-  - conda install -c gmatteo abinit=8.6.1
 
-  # See https://github.com/BVLC/caffe/issues/3884 and https://docs.continuum.io/mkl-optimizations/
-  #- conda install nomkl
-  #- conda install gcc scipy
-  #- conda install pandas
-  #- conda install netcdf4 
-  # See https://github.com/ContinuumIO/anaconda-issues/issues/1360
-  #- conda install hdf4=4.2.12
-  - pip install pytest scripttest nose nose-exclude
-  - pip install pep8 python-coveralls
-  - conda install matplotlib seaborn
-  - conda install ipython jupyter nbformat
-  # Install abinit from gmatteo's conda channel.
-  #- conda install abinit
-  # phonopy is not a requirement but we test scripts in data/runs that use it
-  # FIXME: I'm still using my fork
-  #- git clone https://github.com/gmatteo/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
-  #- git clone https://github.com/gmatteo/abipy.git && cd abipy && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
+  - git clone --depth=50 https://github.com/gmatteo/pymatgen.git && cd pymatgen && python setup.py install && cd ../
+  - git clone --depth=50 https://github.com/abinit/abipy.git && cd abipy && python setup.py install && cd ../
 
   - python setup.py install
   - mkdir -p ${HOME}/.abinit/abipy 
@@ -69,7 +55,7 @@ branches:
     - develop
 
 after_success:
-- if [[ "${PYTHON_VERSION}" == "2.7" && "${TRAVIS_OS_NAME}" == "linux" ]]; then coveralls; fi
+- if [[ "${TRAVIS_PYTHON_VERSION}" == "2.7" && "${TRAVIS_OS_NAME}" == "linux" ]]; then coveralls; fi
 
 
 notifications:
