--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,32 @@
+[metadata]
+description-file = README.md
+
+[aliases]
+release = register sdist bdist_wheel upload
+
+[build]
+force = 1
+
+[bdist_wheel]
+universal=1
+
 [nosetests]
+verbosity=0
 with-doctest=1
-verbosity=2
+#exclude-dir=abipy/gui
+
+[pycodestyle]
+count = True
+max-line-length = 130
+statistics = True
+exclude= .git,__pycache__,dev_scripts,docs,.ipynb_checkpoints,test_*.py,itest_*.py,calcDelta.py,eosfit.py
+ignore = E114,E116,E121,E122,E123,E124,E126,E127,E128,E129,E131,E133,E201,E203,E226,E231,E241,E242,E261,E262,E265,E266,E306,E401,E402,E704,W503,W504,W505,E701,E702,E731,E741,W605
+
+[flake8]
+# max-complexity = 10
+max-line-length = 130
+exclude= .git,__pycache__,dev_scripts,docs,.ipynb_checkpoints,test_*.py,itest_*.py,calcDelta.py,eosfit.py
+extend_ignore = E114,E116,E121,E122,E123,E124,E126,E127,E128,E129,E131,E133,E201,E203,E226,E231,E241,E242,E261,E262,E265,E266,E306,E401,E402,E704,W503,W504,W505,E701,E702,E731,E741,W605,F841
+
+[pydocstyle]
+ignore = D105,D2,D4
