--- a/setup.cfg
+++ b/setup.cfg
@@ -10,11 +10,10 @@ force = 1
 [bdist_wheel]
 universal=1
 
-#[tool:pytest]
+[tool:pytest]
 #ignore=abipy/gui
-#addopt=--cov-config=.coveragerc --cov=abipy -v --doctest-modules pseudo_dojo  \
-#       --ignore=abipy/integration_tests --ignore=abipy/data/refs --ignore=abipy/scripts/ \
-#       --ignore=abipy/examples/plot --ignore=abipy/examples/flows --ignore=abipy/gui
+addopt=--cov-config=.coveragerc --cov=pseudo_dojo -v --doctest-modules pseudo_dojo \
+       --ignore=pseudo_dojo/integration_tests --ignore=pseudo_dojo/dev_scripts
 
 [pycodestyle]
 count = True
